# Owon1041

./: .releaserc.json  CMakeLists.txt  MainWindow.cpp  Owon1041.rc  Settings.cpp  Settings.h
.github/workflows/: build.yml  release.yml  workflow-base.yml
